--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -23,13 +23,12 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter" animation="slide-left-right-ios7">
+  <body ng-app="comrade" animation="slide-left-right-ios7">
     <!-- 
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable nav-title-slide-ios7">
+    <ion-nav-bar class="bar-calm nav-title-slide-ios7">
       <ion-nav-back-button class="button-icon icon ion-chevron-left">
-        Back
       </ion-nav-back-button>
     </ion-nav-bar>
     <!-- 
