--- a/app/www/index.html
+++ b/app/www/index.html
@@ -23,7 +23,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="comrade" animation="slide-left-right-ios7">
+  <body ng-app="comrade" animation="slide-left-right">
     <!-- 
       The nav bar that will be updated as we navigate between views.
     -->
@@ -31,11 +31,7 @@
       <ion-nav-back-button class="button-icon icon ion-chevron-left">
       </ion-nav-back-button>
     </ion-nav-bar>
-    <!-- 
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
+
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
