Lots of good stuff
Moved Hello.init to index
Social support now included Facebook Twitter and Google with all
responses.
Grabs friends list now, but does not populate list view yet, just grabs
friends from the API, and only Facebook right now, adding others today.
Added uniqueness to all social ID stored in the server
Now using proper Proxy support for Twitter and LinkedIn

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -23,6 +23,14 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script>
+        hello.init( {
+            google : '981504375483-e9f503lpnnkcfs83mg8ig9mtoqba7ntt.apps.googleusercontent.com',
+            facebook : '238314456375254',
+            twitter : 'QjnVXduKJIbDaddazyN7uCQCI',
+            linkedin : '75opk4gunsuzbi'
+        });
+    </script>
   </head>
   <body ng-app="comrade" animation="slide-left-right">
     <!-- 
