--- a/app/www/index.html
+++ b/app/www/index.html
@@ -7,11 +7,11 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
       <link href="lib/ionic/css/ionicons.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+      <link href="css/style.css" rel="stylesheet">
+      <script src="http://localhost:1337/socket.io/socket.io.js"></script>
+      <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+      <link href="css/ionic.app.css" rel="stylesheet">
+      -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
