--- a/client/www/index.html
+++ b/client/www/index.html
@@ -19,6 +19,7 @@
     <script src="lib/hello.all.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/ngstorage/ngStorage.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
