--- a/client/www/index.html
+++ b/client/www/index.html
@@ -20,6 +20,7 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/ngstorage/ngStorage.js"></script>
     <script src="lib/angular-messages/angular-messages.js"></script>
+    <script src="lib/angular-growl-notifications/dist/growl-notifications.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
